updated code for indvidual portfolio pages

--- a/contact.html
+++ b/contact.html
@@ -68,10 +68,10 @@
           <!-- Navbar Links -->
           <div id="navbar" class="navbar-collapse collapse page-scroll navbar-right">
             <ul class="nav navbar-nav">
-              <li><a href="#home">Home<span class="sr-only"></span></a></li>
-              <li><a href="#services">Services<span class="sr-only"></span></a></li>
+              <li><a href="index.html">Home<span class="sr-only"></span></a></li>
+              <!-- <li><a href="index.html">Services<span class="sr-only"></span></a></li> -->
               <li><a href="about.html">About<span class="sr-only"></span></a></li>
-              <li><a href="sample1.html">Portfolio<span class="sr-only"></span></a></li>
+              <!-- <li><a href="sample1.html">Portfolio<span class="sr-only"></span></a></li> -->
               <!-- <li><a href="#testimonials">Testimonials<span class="sr-only"></span></a></li>
               <li><a href="#blog">Blog<span class="sr-only"></span></a></li> -->
               <li><a href="contact.html">Contact<span class="sr-only"></span></a></li>
@@ -84,7 +84,7 @@
 
         <!-- ========== Page Title ========== -->
 
-        <header class="page-title pt-dark">
+        <!-- <header class="page-title pt-dark">
           <div class="container">
             <div class="row">
               <div class="col-sm-6">
@@ -93,7 +93,7 @@
               </div>
             </div>
           </div>
-        </header>
+        </header> -->
 
 
         
@@ -102,8 +102,9 @@
         <section id="contact" class="section contact-2">
           
           <header class="sec-heading">
-            <h2>Say Hello</h2>
-            <span class="subheading">We love to discuss your idea</span>
+            <img src="assets/images/bike-logo.png" alt="FJG Logo">
+            <h2><span class="about-heading">CONTACT FJG</span></h2>
+            <!-- <span class="subheading">Dummy content, replace it with your content</span> -->
           </header>
 
           <!-- Map -->
