--- a/about.html
+++ b/about.html
@@ -68,10 +68,10 @@
           <!-- Navbar Links -->
           <div id="navbar" class="navbar-collapse collapse page-scroll navbar-right">
             <ul class="nav navbar-nav">
-              <li><a href="#home">Home<span class="sr-only"></span></a></li>
-              <li><a href="#services">Services<span class="sr-only"></span></a></li>
-              <li><a href="about.html">About<span class="sr-only"></span></a></li>
-              <li><a href="sample1.html">Portfolio<span class="sr-only"></span></a></li>
+              <li><a href="index.html">Home<span class="sr-only"></span></a></li>
+              <!-- <li><a href="#services">Services<span class="sr-only"></span></a></li> -->
+              <li><a href="#about">About<span class="sr-only"></span></a></li>
+              <!-- <li><a href="sample1.html">Portfolio<span class="sr-only"></span></a></li> -->
               <!-- <li><a href="#testimonials">Testimonials<span class="sr-only"></span></a></li>
               <li><a href="#blog">Blog<span class="sr-only"></span></a></li> -->
               <li><a href="contact.html">Contact<span class="sr-only"></span></a></li>
