--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
           <div id="navbar" class="navbar-collapse collapse page-scroll navbar-right">
             <ul class="nav navbar-nav">
               <li><a href="#home">Home<span class="sr-only"></span></a></li>
-              <li><a href="#services">Services<span class="sr-only"></span></a></li>
+              <!-- <li><a href="#services">Services<span class="sr-only"></span></a></li> -->
               <li><a href="about.html">About<span class="sr-only"></span></a></li>
-              <li><a href="sample1.html">Portfolio<span class="sr-only"></span></a></li>
+              <!-- <li><a href="sample1.html">Portfolio<span class="sr-only"></span></a></li> -->
               <!-- <li><a href="#testimonials">Testimonials<span class="sr-only"></span></a></li>
               <li><a href="#blog">Blog<span class="sr-only"></span></a></li> -->
               <li><a href="contact.html">Contact<span class="sr-only"></span></a></li>
