update office images

--- a/contact.html
+++ b/contact.html
@@ -263,7 +263,7 @@
                 <!-- Item 9 -->
                 <div class="col-md-4 portfolio-item webdesign">
                   <div class="p-wrapper hover-default">
-                    <!-- <img src="assets/images/stock-show.jpg" alt="FJG Offfice"> -->
+                    <img src="assets/images/office/office-9.jpg" alt="FJG Offfice">
                   </div>
                 </div><!-- / .portfolio-item -->
   
