added new team members

--- a/index.html
+++ b/index.html
@@ -223,27 +223,27 @@
       </div><!-- / .col-lg-3 -->
 
 
-      <!-- Tripp -->
+      <!-- Phil -->
       <div class="col-lg-3 col-md-6 mb-sm-50">
         <div class="t-item">
 
           <!-- Image -->
           <div class="t-image">
-            <img src="assets/images/team/tripp.jpg" alt="Team Member" class="img-responsive">
+            <img src="assets/images/team/phil.jpg" alt="Team Member" class="img-responsive">
             <div class="t-description">
               <div class="content-wrapper">
                 <h4 class="h-alt">Hello!</h4>
-                <p>Results-oriented, full-stack Web Developer with proven skills in analysis, design, development, testing, and implementation of various internet-based applications. Proficient in a variety of platforms, languages, and embedded systems.</p>
+                <p>As a project director, Phil will handle all aspects of the advertising and marketing schedule as well as tracking of deliverables.</p>
               </div>
             </div>
           </div>
 
           <!-- Info -->
           <div class="t-info">
-            <h4 class="t-name">Tripp Delcore</h4>
-            <span class="t-role">Web Developer</span>
+            <h4 class="t-name">Phil Epple</h4>
+            <span class="t-role">Project Director</span>
             <ul class="social-links">
-              <li><a href="https://www.linkedin.com/in/michaeldelcore/"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/philip-epple-a17a17195/"><i class="fa fa-linkedin"></i></a></li>
             </ul>
           </div>
 
@@ -284,27 +284,27 @@
     <section class="section-team-row2">
     <div class="row">
 
-      <!-- Kristin -->
+      <!-- Tripp -->
       <div class="col-lg-3 col-md-6 mb-sm-50">
         <div class="t-item">
 
           <!-- Image -->
           <div class="t-image">
-            <img src="assets/images/team/kristin.jpg" alt="Team Member" class="img-responsive">
+            <img src="assets/images/team/tripp.jpg" alt="Team Member" class="img-responsive">
             <div class="t-description">
               <div class="content-wrapper">
                 <h4 class="h-alt">Hello!</h4>
-                <p>An accomplished marketing professional with a background in communications, leadership, writing, PR, sales and nonprofit development.</p>
+                <p>Results-oriented, full-stack Web Developer with proven skills in analysis, design, development, testing, and implementation of various internet-based applications. Proficient in a variety of platforms, languages, and embedded systems.</p>
               </div>
             </div>
           </div>
 
           <!-- Info -->
           <div class="t-info">
-            <h4 class="t-name">Kristin B.</h4>
-            <span class="t-role">Media Buyer</span>
+            <h4 class="t-name">Tripp Delcore</h4>
+            <span class="t-role">Web Developer</span>
             <ul class="social-links">
-              <li><a href="http://linkedin.com/in/kristin-battenfield-78750422"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/michaeldelcore/"><i class="fa fa-linkedin"></i></a></li>
             </ul>
           </div>
 
@@ -430,35 +430,33 @@
       </div><!-- / .col-lg-3 -->
 
 
-      <!-- Member 2 -->
+      <!-- Kristin -->
       <div class="col-lg-3 col-md-6 mb-sm-50">
         <div class="t-item">
 
           <!-- Image -->
           <div class="t-image">
-            <img src="http://placehold.it/360x440" alt="Team Member" class="img-responsive">
+            <img src="assets/images/team/kristin.jpg" alt="Team Member" class="img-responsive">
             <div class="t-description">
               <div class="content-wrapper">
                 <h4 class="h-alt">Hello!</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                <p>An accomplished marketing professional with a background in communications, leadership, writing, PR, sales and nonprofit development.</p>
               </div>
             </div>
           </div>
 
           <!-- Info -->
           <div class="t-info">
-            <h4 class="t-name">Carol Greene</h4>
-            <span class="t-role">Art Director</span>
+            <h4 class="t-name">Kristin B.</h4>
+            <span class="t-role">Media Buyer</span>
             <ul class="social-links">
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+              <li><a href="http://linkedin.com/in/kristin-battenfield-78750422"><i class="fa fa-linkedin"></i></a></li>
             </ul>
           </div>
 
         </div><!-- / .t-item -->
       </div><!-- / .col-lg-3 -->
+
 
 
       <!-- Member 3 -->
@@ -478,13 +476,10 @@
 
           <!-- Info -->
           <div class="t-info">
-            <h4 class="t-name">Tyler Owens</h4>
+            <h4 class="t-name">Jane Doe</h4>
             <span class="t-role">Lead Designer</span>
             <ul class="social-links">
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
             </ul>
           </div>
 
@@ -508,8 +503,8 @@
           <!-- Info -->
           <div class="t-info">
             <h4 class="t-name">You?</h4>
-            <span class="t-role">Junior Developer</span>
-            <button class="btn btn-small" type="file">send cv</button>
+            <span class="t-role">Job Title</span>
+            <button class="btn btn-small" type="file">send resume</button>
           </div>
 
         </div><!-- / .t-item -->
