added new portfolio pages

--- a/index.html
+++ b/index.html
@@ -592,6 +592,7 @@
 
               <!-- Item 4 -->
               <div class="col-md-4 portfolio-item integrated">
+                <a href="think_fast.html">
                 <div class="p-wrapper hover-default">
                   <img src="assets/images/longmont-united.jpg" alt="Longmont United">
                   <div class="p-hover">
@@ -601,10 +602,12 @@
                     </div>
                   </div>
                 </div>
+              </a>
               </div><!-- / .portfolio-item -->
 
               <!-- Item 5 -->
               <div class="col-md-4 portfolio-item Webdesign">
+                <a href="our_family.html">
                 <div class="p-wrapper hover-default">
                   <img src="assets/images/marti-mary.jpg" alt="Marti Mary">
                   <div class="p-hover">
@@ -614,6 +617,7 @@
                     </div>
                   </div>
                 </div>
+              </a>
               </div><!-- / .portfolio-item -->
 
               <!-- Item 6 -->
