updated portfolio pages and links

--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
 
               <!-- Item 2 -->
               <div class="col-md-4 portfolio-item integrated">
-                <a href="new_physicians.html">
+                <a href="minutes_matter.html">
                 <div class="p-wrapper hover-default">
                   <img src="assets/images/emergency-care.jpg" alt="Emergency Care">
                   <div class="p-hover">
@@ -638,6 +638,7 @@
               
               <!-- Item 7 -->
               <div class="col-md-4 portfolio-item integrated">
+                <a href="maia_wealth.html">
                 <div class="p-wrapper hover-default">
                   <img src="assets/images/maia_wealth.jpg" alt="maia wealth">
                   <div class="p-hover">
@@ -647,6 +648,7 @@
                     </div>
                   </div>
                 </div>
+              </a>
               </div><!-- / .portfolio-item -->
 
               <!-- Item 8 -->
@@ -666,6 +668,7 @@
 
               <!-- Item 9 -->
               <div class="col-md-4 portfolio-item webdesign">
+                <a href="stock_show.html">
                 <div class="p-wrapper hover-default">
                   <img src="assets/images/stock-show.jpg" alt="stock show">
                   <div class="p-hover">
@@ -675,6 +678,7 @@
                     </div>
                   </div>
                 </div>
+              </a>
               </div><!-- / .portfolio-item -->
 
             </div><!-- / #pfolio -->
