full site updates

--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@
                     <span class="linea-basic-map adr-icon"></span>
                     <div class="adr-group">
                       <span class="adr-heading">Address</span>
-                      <span class="adr-info">3201 Osage St. <br>Denver, CO 80211</span>
+                      <span class="adr-info">3201 Osage St., Suite 100 <br>Denver, CO 80211</span>
                     </div>
                   </li>
 
