--- a/global-health.html
+++ b/global-health.html
@@ -124,7 +124,7 @@
 
               <!-- Image 3 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/global-health/Picture_3_Global-Health-Community_Business-Card_750x450-copy.jpg" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/global-health/global-health-business-cards.jpg" alt="Image Description" class="img-responsive">
                 <h5>Business Card for GHCA</h5>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
               </div><!-- / .project-item -->
@@ -169,10 +169,10 @@
               </blockquote> -->
             </aside><!-- / .col-md-4 -->
 
-            <div class="col-md-6">
+            <div class="col-md-8">
               <!-- Image 1 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/global-health/Picture_4_Global-Health-Community_Logo_Coasters_750x450-copy.jpg" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/global-health/global-health-coaster.jpg" alt="Logo Coasters" class="img-responsive">
                 <h5>Logo Coasters</h5>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
               </div><!-- / .project-item -->
