--- a/minutes_matter.html
+++ b/minutes_matter.html
@@ -63,7 +63,7 @@
           <!-- Navbar Links -->
           <div id="navbar" class="navbar-collapse collapse page-scroll navbar-right">
             <ul class="nav navbar-nav">
-              <li><a href="#home">Home<span class="sr-only"></span></a></li>
+              <li><a href="index.html">Home<span class="sr-only"></span></a></li>
               <!-- <li><a href="#services">Services<span class="sr-only"></span></a></li> -->
               <li><a href="about.html">About<span class="sr-only"></span></a></li>
               <!-- <li><a href="sample1.html">Portfolio<span class="sr-only"></span></a></li> -->
@@ -112,19 +112,19 @@
             <div class="col-md-8">
               <!-- Image 1 -->
               <div class="project-item">
-                <img src="assets/portfolio-images/minutes_matter/minutes_matter_digital.gif" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/minutes_matter/minutes_matter_digital.gif" alt="Digital Advertising" class="img-responsive">
                 <h5>Digital Advertising</h5>
               </div><!-- / .project-item -->
 
               <!-- Image 2 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/minutes_matter/minutes_matter_dir_mail.jpg" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/minutes_matter/minutes_matter_dir_mail.jpg" alt="Direct Mailer" class="img-responsive">
                   <h5>Direct Mailer</h5>
               </div><!-- / .project-item -->
 
               <!-- Image 3 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/minutes_matter/minutes_matter_email.jpg" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/minutes_matter/minutes_matter_email.jpg" alt="Email Marketing" class="img-responsive">
                 <h5>Email Marketing</h5>
               </div><!-- / .project-item -->
 
@@ -168,13 +168,8 @@
               </blockquote> -->
             </aside><!-- / .col-md-4 -->
 
-            <div class="col-md-6">
+            <div class="col-md-8">
               <!-- Image 1 -->
-              <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/minutes_matter/minutes_matter_digital.jpg" alt="Image Description" class="img-responsive">
-              <h5>Digital Advertising</h5>
-              </div><!-- / .project-item -->
-              
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
                 <img src="assets/portfolio-images/minutes_matter/minutes_matter_app.jpg" alt="Image Description" class="img-responsive">
                 <h5>In App Advertising</h5>
