--- a/ortho_colorado.html
+++ b/ortho_colorado.html
@@ -63,7 +63,7 @@
           <!-- Navbar Links -->
           <div id="navbar" class="navbar-collapse collapse page-scroll navbar-right">
             <ul class="nav navbar-nav">
-              <li><a href="#home">Home<span class="sr-only"></span></a></li>
+              <li><a href="index.html">Home<span class="sr-only"></span></a></li>
               <!-- <li><a href="#services">Services<span class="sr-only"></span></a></li> -->
               <li><a href="about.html">About<span class="sr-only"></span></a></li>
               <!-- <li><a href="sample1.html">Portfolio<span class="sr-only"></span></a></li> -->
@@ -168,7 +168,7 @@
               </blockquote> -->
             </aside><!-- / .col-md-4 -->
 
-            <div class="col-md-6">
+            <div class="col-md-8">
               <!-- Image 1 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
                 <img src="assets/portfolio-images/ortho_colorado/ortho-facebook2.jpg" alt="Image Description" class="img-responsive">
@@ -177,15 +177,33 @@
               </div><!-- / .project-item -->
               </div>
 
-              <div class="col-md-6">
+              <div class="col-md-8">
                 <!-- Image 7 -->
-                <!-- <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-            <img src="assets/portfolio-images/ortho_colorado/ortho-facebook.jpg" alt="Image Description" class="img-responsive">
-            <h5>Facebook Sponsored Ads</h5> -->
+                <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
+            <img src="assets/portfolio-images/ortho_colorado/ortho_digital.gif" alt="Digital Display Advertising" class="img-responsive">
+            <h5>Digital Display Advertising</h5>
             <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
           </div><!-- / .project-item -->
         </div>
 
+        <div class="col-md-8">
+          <!-- Image 1 -->
+          <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
+            <a href="assets/portfolio-images/ortho_colorado/ortho_excellence_radio.mp3" target="_blank">
+            <img src="assets/portfolio-images/ortho_colorado/thumbnail_audio.png" alt="Radio Ad Play Button" class="img-responsive">
+            <h5>Radio Ad (click to hear audio)</h5></a>
+            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
+          </div><!-- / .project-item -->
+        </div>
+
+        <div class="col-md-8">
+          <!-- Image 7 -->
+          <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
+            <iframe width="750" height="450" src="https://www.youtube.com/embed/fwd8BKEGFsA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h5>TV Advertising</h5>
+          <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
+          </div><!-- / .project-item -->
+        </div>
 
           </div><!-- / .row -->
 
