--- a/our_family.html
+++ b/our_family.html
@@ -63,7 +63,7 @@
           <!-- Navbar Links -->
           <div id="navbar" class="navbar-collapse collapse page-scroll navbar-right">
             <ul class="nav navbar-nav">
-              <li><a href="#home">Home<span class="sr-only"></span></a></li>
+              <li><a href="index.html">Home<span class="sr-only"></span></a></li>
               <!-- <li><a href="#services">Services<span class="sr-only"></span></a></li> -->
               <li><a href="about.html">About<span class="sr-only"></span></a></li>
               <!-- <li><a href="sample1.html">Portfolio<span class="sr-only"></span></a></li> -->
@@ -110,27 +110,27 @@
             <div class="col-md-8">
               <!-- Image 1 -->
               <div class="project-item">
-                <img src="assets/portfolio-images/our-family/our_family_digital.gif" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/our-family/our_family_digital.gif" alt="Our Family Digital Advertising" class="img-responsive">
                 <h5>Digital</h5>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
               </div><!-- / .project-item -->
 
               <!-- Image 2 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/our-family/our_family_billboard.jpg" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/our-family/our_family_billboard.jpg" alt="Our Family Billboard Advertising" class="img-responsive">
                 <h5>Billboard</h5>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
               </div><!-- / .project-item -->
 
               <!-- Image 3 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/our-family/our_family_print_1.jpg" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/our-family/our_family_print_1.jpg" alt="Our Family Print Ad" class="img-responsive">
                 <h5>Print Ad</h5>
               </div>
 
               <!-- Image 3 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                  <img src="assets/portfolio-images/our-family/our_family_print_2.jpg" alt="Image Description" class="img-responsive">
+                  <img src="assets/portfolio-images/our-family/our_family_print_2.jpg" alt="Our Family Print Ad" class="img-responsive">
                   <h5>Print Ad</h5>
                 </div>
 
@@ -174,24 +174,31 @@
               </blockquote> -->
             </aside><!-- / .col-md-4 -->
 
-            <div class="col-md-6">
+            <div class="col-md-8">
                 <!-- Image 1 -->
                 <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                  <img src="assets/portfolio-images/our-family/our_family_fb.gif" alt="Image Description" class="img-responsive">
+                  <img src="assets/portfolio-images/our-family/our_family_fb_ad.gif" alt="Our Family Facebook Advertising" class="img-responsive">
                   <h5>Facebook Advertising</h5>
                   <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
                 </div><!-- / .project-item -->
                 </div>
   
-                <div class="col-md-6">
+              <div class="col-md-8">
                   <!-- Image 7 -->
                   <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-              <img src="assets/portfolio-images/our-family/our_family_nextdoor.jpg" alt="Image Description" class="img-responsive">
+              <img src="assets/portfolio-images/our-family/our_family_nextdoor.jpg" alt="Our Family In App Advertising" class="img-responsive">
               <h5>In App Advertising</h5>
               <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p> -->
             </div><!-- / .project-item -->
           </div>
-  
+          
+          <div class="col-md-8">
+            <!-- Image 7 -->
+            <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
+              <iframe src="https://player.vimeo.com/video/384608685" width="750" height="450" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+              <h5>TV Broadcast</h5>
+      </div><!-- / .project-item -->
+    </div>
 
           </div><!-- / .row -->
 
