--- a/stock_show.html
+++ b/stock_show.html
@@ -124,8 +124,8 @@
 
               <!-- Image 3 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/stock_show/stock_show_banner_stadium_arena.png" alt="Image Description" class="img-responsive">
-                <h5>Banner Advertising</h5>
+                <iframe src="https://player.vimeo.com/video/384610803" width="750" height="450" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                <h5>Preroll Advertising</h5>
               </div><!-- / .project-item -->
 
               
@@ -191,17 +191,17 @@
 
         <div class="col-md-6">
             <!-- Image 1 -->
-            <!-- <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-              <img src="assets/portfolio-images/think_fast/think_fast_elevator.jpg" alt="Image Description" class="img-responsive">
-              <h5>elevator Door Wrap</h5> -->
+            <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
+                <img src="assets/portfolio-images/stock_show/stock_show_banner_stadium_arena.png" alt="Image Description" class="img-responsive">
+                <h5>Banner Advertising</h5>
             </div><!-- / .project-item -->
             </div>
 
             <div class="col-md-6">
               <!-- Image 7 -->
               <!-- <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-          <img src="assets/portfolio-images/think_fast/think_fast_print.png" alt="Image Description" class="img-responsive">
-          <h5>Van Wrap</h5> -->
+                <img src="assets/portfolio-images/stock_show/stock_show_banner_stadium_arena.png" alt="Image Description" class="img-responsive">
+                <h5>Banner Advertising</h5> -->
         </div><!-- / .project-item -->
       </div>
 
