--- a/think_fast.html
+++ b/think_fast.html
@@ -63,7 +63,7 @@
           <!-- Navbar Links -->
           <div id="navbar" class="navbar-collapse collapse page-scroll navbar-right">
             <ul class="nav navbar-nav">
-              <li><a href="#home">Home<span class="sr-only"></span></a></li>
+              <li><a href="index.html">Home<span class="sr-only"></span></a></li>
               <!-- <li><a href="#services">Services<span class="sr-only"></span></a></li> -->
               <li><a href="about.html">About<span class="sr-only"></span></a></li>
               <!-- <li><a href="sample1.html">Portfolio<span class="sr-only"></span></a></li> -->
@@ -112,19 +112,19 @@
             <div class="col-md-8">
               <!-- Image 1 -->
               <div class="project-item">
-                <img src="assets/portfolio-images/think_fast/think_fast_billboard.gif" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/think_fast/think_fast_billboard.gif" alt="Think Fast Billboard Advertising" class="img-responsive">
                 <h5>Billboard Advertising</h5>
               </div><!-- / .project-item -->
 
               <!-- Image 2 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/think_fast/think_fast_elevator.jpg" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/think_fast/think_fast_elevator.jpg" alt="Think Fast Elevator Door Wrap" class="img-responsive">
                 <h5>Elevator Door Wrap</h5>
               </div><!-- / .project-item -->
 
               <!-- Image 3 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/think_fast/think_fast_print.png" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/think_fast/think_fast_print.png" alt="Think Fast Print Advertising" class="img-responsive">
                 <h5>Print Advertising</h5>
               </div><!-- / .project-item -->
 
@@ -168,20 +168,20 @@
               </blockquote> -->
             </aside><!-- / .col-md-4 -->
 
-            <div class="col-md-6">
+            <div class="col-md-8">
               <!-- Image 1 -->
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                <img src="assets/portfolio-images/think_fast/think_fast_banner.png" alt="Image Description" class="img-responsive">
+                <img src="assets/portfolio-images/think_fast/think_fast_banner.png" alt="Think Fast Site Banner" class="img-responsive">
                 <h5>Site Banner</h5>
               </div><!-- / .project-item -->
               
               <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
-                  <img src="assets/portfolio-images/think_fast/think_fast_fb.gif" alt="Image Description" class="img-responsive">
+                  <img src="assets/portfolio-images/think_fast/think_fast_fb.gif" alt="Think Fast Facebook Advertising" class="img-responsive">
                   <h5>Facebook Advertising</h5>
                 </div><!-- / .project-item -->
               </div>
 
-              <div class="col-md-6">
+              <div class="col-md-8">
                 <!-- Image 7 -->
                 <!-- <div class="project-item wow fadeInUp" data-wow-duration="1.3s">
             <img src="assets/portfolio-images/think_fast/think_fast_fb.gif" alt="Image Description" class="img-responsive">
